k8s/manifests/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bulletins
  labels:
    app.kubernetes.io/name: bulletin-board
